--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,12 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>catalog</name>
 	<description>Simple Spring Boot REST API app </description>
+
 	<properties>
 		<java.version>11</java.version>
+		<modelmapper.version>2.3.2</modelmapper.version>
 	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -43,6 +46,19 @@
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
+
+
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>${modelmapper.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
