add in AuthorController POST method

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.h2.console.enabled=true
 
 spring.sql.init.mode=always
 spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.show-sql=true
 #spring.jpa.generate-ddl=true
 #
