--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.h2.console.enabled=true
 
+spring.datasource.name=catalog
+spring.datasource.generate-unique-name=false
+
 spring.sql.init.mode=always
 spring.jpa.hibernate.ddl-auto=none
 #spring.jpa.hibernate.ddl-auto=create-drop
